turtleart.square.Square.scala.error
Compilation error:
Square:2: error: ';' expected but ',' found.
              for (i<-0 to 3) {forward(100), left(90)}
                                           ^